# Shyft.lol

./: .env.example  .gitignore  AUDIT.md  Anchor.toml  README.md  check-accounts.js  check-balance.ts  check-disc.js  check-disc2.js  check-rent-full.ts  check-rent-mainnet.ts  check-unknowns.js  clear-chats.ts  close-chat.ts  debug-accounts.ts  deep-inspect-tx.ts  generate-collab-image.py  investigate-treasury.ts  next.config.ts  nuke-all.ts  nuke-chat.ts  package-lock.json  package.json  quick-check.js  quick-fetch.js  repin-all.ts  scan-chats.ts  test-check-posts.js  test-e2e-chat.ts  test-fetch.js  test-post.ts  test-private-posts.js  test-profile.ts  test-raw-profiles.js  test-visibility.js  tsconfig.json
programs/shadowspace/: Cargo.toml
programs/shadowspace/src/: lib.rs
public/: privacy.html  shyft-privy-collab.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/bags/: route.ts
src/app/api/build-tx/: route.ts
src/app/api/gif/: route.ts
src/app/api/magicblock/: route.ts
src/app/api/post-card/: route.tsx
src/app/api/rpc/: route.ts
src/app/api/sponsor-tx/: route.ts
src/app/api/stats/: route.ts
src/app/docs/: page.tsx
src/app/export-key/: page.tsx
src/app/tip/: page.tsx
src/components/: ChainSelector.tsx  Chat.tsx  Communities.tsx  CreatorDashboard.tsx  Feed.tsx  FloatingAIButton.tsx  FollowListModal.tsx  Friends.tsx  Header.tsx  Landing.tsx  MobileNav.tsx  OnboardingDemo.tsx  Payments.tsx  Profile.tsx  ProfileHoverCard.tsx  ProfileSetup.tsx  RichContent.tsx  Sidebar.tsx  ThemeProvider.tsx  Toast.tsx  TokenLaunch.tsx  TokenTrade.tsx  Tokens.tsx  TrendingSidebar.tsx  TrendingTokenCard.tsx
src/contexts/: WalletProvider.tsx
src/hooks/: useMagicBlockPayment.ts  useNotifications.ts  usePrivatePayment.ts  usePrivyWallet.ts  useProgram.ts  useSessionKey.ts
src/lib/: bags.ts  constants.ts  idl.json  magicblock.ts  program.ts  reserved-usernames.ts  store.ts
src/types/: index.ts  shadowspace.ts
(+8 files in other folders)
