[package]
name = "shadowspace"
version = "0.1.0"
description = "ShadowSpace - Private Social on Solana via MagicBlock PERs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowspace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.8.0", features = ["anchor", "access-control"] }
blake3 = "=1.5.5"
