[package]
name = "shadowspace"
version = "0.1.0"
description = "ShadowSpace - Social on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowspace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
session-keys = { version = "3.0.10", features = ["no-entrypoint"] }
blake3 = "=1.5.5"
